src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 292 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]
